--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -11,7 +11,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     python-setuptools
 
 RUN pip install tf-nightly-gpu
-
+RUN pip install wget
 # Checkout tensorflow/models at HEAD
 RUN git clone https://github.com/tensorflow/models.git /tensorflow_models
 
